...
    accessibilityLabel: 'A pug wrapped in a blanket',
  },
  {
    source: picsum(1039, 2000, 1333),
    width: 2000,
    height: 1333,
    accessibilityLabel: 'A waterfall seen from above',
  },
  {
    source: picsum(1043, 1400, 1867),
    width: 1400,
    height: 1867,
    accessibilityLabel: 'A skyscraper shot from street level',
...
